# universe-selector

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  config.example.yaml  pyproject.toml
.agents/skills/universe-selector/: SKILL.md
.agents/skills/universe-selector-cross-profile/: SKILL.md
.agents/skills/universe-selector-cross-profile/agents/: openai.yaml
.claude/skills/: universe-selector
.github/workflows/: ci.yml
docs/: data-and-output.md  extending.md  ranking-profiles.md  valuation.md
docs/superpowers/plans/: 2026-07-14-provider-neutral-tw-value-resolution.md
docs/superpowers/specs/: 2026-07-11-tpex-fundamentals-symbol-mapping-design.md  2026-07-14-provider-neutral-tw-value-resolution-design.md
skills/universe-selector/: SKILL.md
skills/universe-selector/agents/: openai.yaml
src/universe_selector/: __init__.py  __main__.py  cli.py  config.py  domain.py  errors.py  identifiers.py  locking.py  pipeline.py  screening.py
src/universe_selector/output/: __init__.py  inspect.py  json.py  report.py  screen.py  valuation.py  value.py
src/universe_selector/persistence/: __init__.py  repository.py  schema.py
src/universe_selector/persistence/migrations/: 001_initial.sql  002_report_json_artifacts.sql  003_fundamentals_metadata.sql
src/universe_selector/providers/: __init__.py  base.py  context.py  fixture.py  live.py  models.py  nasdaq_trader.py  registration.py  registry.py  twse_isin.py  yfinance_fundamentals.py  yfinance_ohlcv.py
src/universe_selector/ranking_profiles/: __init__.py  _alpha_common.py  base.py  base_breakout_quality_v1.py  defensive_compounder_quality_v1.py  fundamental_quality_profitability_v1.py  liquidity_quality_v1.py  mean_reversion_quality_v1.py  momentum_quality_v1.py  momentum_v1.py  rank_math.py  registration.py  registry.py  relative_strength_leader_v1.py  sample_price_trend_v1.py  trend_pullback_quality_v1.py  trend_quality_v1.py  volatility_quality_v1.py
src/universe_selector/valuation/: assumptions.py  base.py  exit_multiple_dcf_v1.py  fcf_dcf_v1.py  formatting.py  implied_discount_rate_v1.py  input_resolution.py  models.py  multiple_valuation_v1.py  output.py  output_sections.py  registry.py  reverse_dcf_v1.py  service.py  two_stage_fcf_dcf_v1.py
tests/: conftest.py  test_base_breakout_quality_profile.py  test_cli.py  test_config.py  test_config_file_contract.py  test_defensive_compounder_quality_profile.py  test_domain.py  test_fixture_provider.py  test_fundamental_quality_profitability_profile.py  test_identifiers.py  test_liquidity_quality_profile.py  test_live_provider.py  test_mean_reversion_quality_profile.py  test_momentum_profile.py  test_momentum_quality_profile.py  test_nasdaq_trader_provider.py  test_output.py  test_package_metadata.py  test_persistence_repository.py  test_pipeline.py  test_provider_context.py  test_provider_models.py  test_provider_registry.py  test_readme_contract.py  test_relative_strength_leader_profile.py  test_sample_price_trend_profile.py  test_screen_output.py  test_screening.py  test_trend_pullback_quality_profile.py  test_trend_quality_profile.py  test_twse_isin_provider.py  test_valuation_assumptions.py  test_valuation_exit_multiple_dcf_v1.py  test_valuation_fcf_dcf_v1.py  test_valuation_implied_discount_rate_v1.py  test_valuation_multiple_valuation_v1.py  test_valuation_output.py  test_valuation_registry.py  test_valuation_reverse_dcf_v1.py  test_valuation_service.py  (+4 more)
tests/fixtures/: generate_sample_basic.py
tests/fixtures/nasdaq_trader/: nasdaqlisted_sample.txt  otherlisted_sample.txt
tests/fixtures/sample_basic/: fundamentals.csv  listings.csv  metadata.json  ohlcv.csv
tests/fixtures/twse_isin/: str_mode_2_sample.html  str_mode_4_sample.html
tests/fixtures/valuation_assumptions/tw/: 2330.yaml
tests/fixtures/valuation_assumptions/us/: AAPL.yaml
valuation_assumptions/tw/: 2330.yaml
valuation_assumptions/us/: AAPL.yaml
