[project]
name = "universe-selector"
version = "0.1.11"
description = "Run-centric quantitative universe selector"
readme = "README.md"
authors = [
  { name = "zients" }
]
license = "MIT"
requires-python = ">=3.12,<3.15"
keywords = [
  "quantitative-finance",
  "universe-selection",
  "duckdb",
  "yfinance"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Financial and Insurance Industry",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Office/Business :: Financial :: Investment",
  "Typing :: Typed"
]
dependencies = [
  "duckdb>=1.2.0",
  "filelock>=3.16.1",
  "polars>=1.20.0",
  "PyYAML>=6.0.2",
  "typer>=0.15.1",
  "yfinance>=0.2.54"
]

[project.scripts]
universe-selector = "universe_selector.cli:app"

[project.urls]
Homepage = "https://github.com/zients/universe-selector"
Repository = "https://github.com/zients/universe-selector"
Documentation = "https://github.com/zients/universe-selector/tree/main/docs"
Issues = "https://github.com/zients/universe-selector/issues"

[dependency-groups]
dev = [
  "mypy>=1.14.1",
  "pytest>=8.3.4",
  "pytest-socket>=0.7.0",
  "ruff>=0.8.6"
]

[tool.uv]
required-version = ">=0.10.9"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/universe_selector"]

[tool.hatch.build.targets.sdist]
exclude = [
  "/.git",
  "/.pytest_cache",
  "/.venv",
  "/.worktrees",
  "/dist",
]

[tool.hatch.build.targets.wheel.force-include]
"config.example.yaml" = "universe_selector/config.example.yaml"
"src/universe_selector/persistence/migrations/001_initial.sql" = "universe_selector/persistence/migrations/001_initial.sql"
"src/universe_selector/persistence/migrations/002_report_json_artifacts.sql" = "universe_selector/persistence/migrations/002_report_json_artifacts.sql"

[tool.pytest.ini_options]
addopts = "--disable-socket"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E9", "F"]

[tool.mypy]
python_version = "3.12"
files = ["src/universe_selector"]
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_configs = true

# The package ships `py.typed`; the CI mypy gate now walks the whole package.
# These implementation-heavy modules need gradual typing work, so their current
# baseline is explicit instead of hidden by a narrow `files` list.
[[tool.mypy.overrides]]
module = [
  "universe_selector.output.inspect",
  "universe_selector.output.report",
  "universe_selector.persistence.repository",
  "universe_selector.providers.nasdaq_trader",
  "universe_selector.providers.twse_isin",
  "universe_selector.providers.yfinance_fundamentals",
  "universe_selector.providers.yfinance_ohlcv",
  "universe_selector.ranking_profiles.defensive_compounder_quality_v1",
  "universe_selector.ranking_profiles.liquidity_quality_v1",
  "universe_selector.ranking_profiles.momentum_quality_v1",
  "universe_selector.ranking_profiles.momentum_v1",
  "universe_selector.ranking_profiles.sample_price_trend_v1",
  "universe_selector.ranking_profiles.trend_quality_v1",
  "universe_selector.ranking_profiles.volatility_quality_v1",
  "universe_selector.valuation.fcf_dcf_v1",
  "universe_selector.valuation.reverse_dcf_v1",
]
ignore_errors = true
